Menyelesaikan website kota padang dan layout awal kalkulator

--- a/views/website.html
+++ b/views/website.html
@@ -2,14 +2,17 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kota Padang</title>
     <link rel="stylesheet" href="../assets/css/web.css">
 </head>
 
 <body>
     <header>
-        <h1>Padang</h1>
-        <p>Kota metropolitan terbesar di Sumatra Barat, sekaligus menjadi ibukota Provinsi Sumatra Barat</p>
+        <div class="jumbotron">
+            <h1>Padang</h1>
+            <p>Kota metropolitan terbesar di Sumatra Barat, sekaligus menjadi ibukota Provinsi Sumatra Barat</p>
+        </div>
         <nav>
             <ul>
                 <li><a href="#sejarah">Sejarah</a></li>
@@ -19,30 +22,30 @@
         </nav>
     </header>
     <main>
-        <article class="card">
-            <section id="sejarah">
+        <div id="content">
+            <article id="sejarah" class="card">
                 <h2>Sejarah</h2>
                 <img src="../assets/img/sejarahpadang.jpg" class="featured-images" alt="Kota Padang Tempo Dulu">
                 <p>Kota Padang berasal dari kata <em>Padang</em> yang berarti tanah lapang. Daerah tersebut dinamakan Padang karena bentuk daerahnya yang berupa dataran rendah yang datar.</p>
-                </asection>
-                <section id="geografis">
-                    <h2>Geografis</h2>
-                    <img src="../assets/img/geografis_padang.jpg" class="featured-images" alt="Pemandangan Kota Padang">
-                    <p>Kota Padang berbentuk dataran rendah yang memiliki pantai di sebelah barat, serta perbukitan di sebelah timur.</p>
-                </section>
-                <section id="wisata">
-                    <h2>Wisata</h2>
-                    <img src="../assets/img/wisata_padang.JPG" class="featured-images" alt="Jembatan Siti Nurbaya">
-                    <p>Jembatan Siti Nurbaya adalah salah satu tempat ikonik di Kota Padang. Jembatan ini sudah ada semenjak zaman penjajahan Belanda. Jembatan Siti Nurbaya terletak di daerah Muara yang merupakan kota tua.</p>
-                </section>
-        </article>
+            </article>
+            <article id="geografis" class="card">
+                <h2>Geografis</h2>
+                <img src="../assets/img/geografis_padang.jpg" class="featured-images" alt="Pemandangan Kota Padang">
+                <p>Kota Padang berbentuk dataran rendah yang memiliki pantai di sebelah barat, serta perbukitan di sebelah timur.</p>
+            </article>
+            <article id="wisata" class="card">
+                <h2>Wisata</h2>
+                <img src="../assets/img/wisata_padang.JPG" class="featured-images" alt="Jembatan Siti Nurbaya">
+                <p>Jembatan Siti Nurbaya adalah salah satu tempat ikonik di Kota Padang. Jembatan ini sudah ada semenjak zaman penjajahan Belanda. Jembatan Siti Nurbaya terletak di daerah Muara yang merupakan kota tua.</p>
+            </article>
+        </div>
         <aside>
             <article class="card">
                 <header>
                     <h2>Kota Padang</h2>
                     <p>Kota Bengkoang</p>
                     <figure>
-                        <img src="../assets/img/logopadang.png" alt="Logo Kota Padang">
+                        <img src="../assets/img/logopadang.png" class="profile-picture" alt="Logo Kota Padang">
                         <figcaption>Lambang</figcaption>
                     </figure>
                 </header>
