--- a/assets/css/web.css
+++ b/assets/css/web.css
@@ -1,15 +1,60 @@
+/*
+Positioning
+static / normal flow
+relative: terhadap elemen induk, perubahan posisi tidak mempengaruhi elemen sekitar
+absolute: sama seperti relative tetapi terhadap jendela browser dan elemen induk jika keluar dari normal flow juga
+fixed: sama seperti relative, tetapi posisi selalu tetap walau scrolling
+
+float: elemen tidak dianggap ada oleh induknya
+        cara menangani: clear property => buat satu elemen div kosong
+                        overflow: auto => pada elemen yang menampung float
+
+box-sizing:border-box untuk memastikan ukuran box tak terpengaruh padding, margin
+*/
+
+
+/*
+flexbox
+flex-item auto menyesuaikan space, parent-child
+flex-grow => properti untuk menentukan ukuran flex-item
+flex-direction => arah susunan flex-item => default horizontal
+
+*/
+
+
+/*setup*/
+
 @font-face {
     font-family: "Dicoding Font";
     src: url('FILE-FONT.TTF');
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap');
-p {
-    font-family: 'Quicksand', sans-serif;
+* {
+    box-sizing: border-box;
 }
 
+
+/*general*/
+
+body {
+    font-family: 'Quicksand', sans-serif;
+    padding: 0;
+    margin: 0;
+}
+
+h2 {
+    color: aqua;
+}
+
+
+/* header */
+
 nav a {
+    font-size: 18px;
+    font-weight: 400;
     text-decoration: none;
+    color: white;
 }
 
 nav a:hover {
@@ -17,12 +62,74 @@ nav a:hover {
     color: red;
 }
 
+nav li {
+    display: inline;
+    list-style-type: none;
+    margin-right: 20px;
+}
+
+nav {
+    background-color: #00a2c6;
+    padding: 5px;
+    position: sticky;
+    top: 0;
+}
+
+header {
+    display: inline;
+}
+
+.jumbotron {
+    padding: 60px;
+    background-color: #00c8eb;
+    text-align: center;
+    font-size: 20px;
+    color: white;
+}
+
 
 /* Gambar */
 
 .featured-images {
     width: 100%;
-    height: 300px;
+    max-height: 300px;
+    /* agar gambar proporsional */
+    object-fit: cover;
+    object-position: center;
+}
+
+.profile-picture {
+    width: 200px;
+}
+
+
+/* main */
+
+main {
+    padding: 20px;
+    overflow: auto;
+}
+
+#content {
+    float: left;
+    width: 75%;
+}
+
+aside {
+    float: right;
+    width: 25%;
+    padding-left: 20px;
+}
+
+
+/* Card */
+
+.card {
+    /*offset-x || offset-y || blur-radius || spread-radius || color*/
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    padding: 20px;
+    margin-top: 20px;
 }
 
 
@@ -42,4 +149,15 @@ footer {
     background-color: #004488;
     text-align: center;
     font-weight: bold;
+}
+
+
+/* media query */
+
+@media screen and (max-width: 1000px) {
+    #content,
+    aside {
+        width: 100%;
+        padding: 0;
+    }
 }
