--- a/views/kalkulator.html
+++ b/views/kalkulator.html
@@ -38,7 +38,24 @@
             <div class="button equals double">=</div>
         </div>
     </div>
+    <div class="history card">
+        <h2>Riwayat Perhitungan</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Angka Pertama</th>
+                    <th>operator</th>
+                    <th>Angka Kedua</th>
+                    <th>Hasil</th>
+                </tr>
+            </thead>
+            <tbody id="historyList"></tbody>
+        </table>
+        <div id="clear-history">clear</div>
 
+    </div>
+    <script src="../assets/js/storage.js"></script>
+    <script src="../assets/js/kalkulator.js"></script>
 </body>
 
 </html>
